<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2020 Peter Gregus (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>

    <string name="app_name">Statusbar download progress</string>
    <string name="app_desc">Shows download progress bar in status bar for downloads carried out via
        Android\'s standard download manager</string>

    <string name="module_not_active">Module is not active. Use Xposed Installer to activate module and then 
        reboot your device.</string>

    <!-- Options -->
    <string name="pref_cat_options_title">Options</string>

    <string name="pref_mode_title">Mode</string>
    <string name="sb_download_progress_off">Disabled</string>
    <string name="sb_download_progress_top">Top edge</string>
    <string name="sb_download_progress_bottom">Bottom edge</string>

    <string name="pref_edge_margin_title">Edge margin</string>

    <!-- About -->
    <string name="pref_cat_about_title">About</string>
    <string name="pref_about_summary">Developed by C3C076@XDA. Touch to visit official support thread.</string>
    <string name="pref_about_donate_title">Support developer</string>
    <string name="pref_about_donate_waiting">Waiting for Google billing services&#8230;</string>
    <string name="pref_about_donate_error">Error contacting Google billing services</string>
    <string name="pref_about_donate_no_items">There are currently no in-app donation items available</string>
    <string name="pref_about_donate_summary">Touch to initiate in-app donation</string>
    <string name="donate_transaction_error">Donation transaction was unsuccessful</string>
    <string name="donate_transaction_ok">Donation transaction was successful. Thank you very much for your support!</string>

    <!-- Hide launcher icon -->
    <string name="pref_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="pref_hide_launcher_icon_summary">May require launcher restart</string>

    <!-- Progress bar color -->
    <string name="pref_cat_colors_title">Colors</string>
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="pref_color_title">Color</string>
    <string name="pref_color_follow_clock_title">Follow clock color</string>

    <!-- God mode -->
    <string name="pref_god_mode_title">God mode</string>
    <string name="pref_god_mode_summary">Attempts to show progress bar for any app having ongoing notification that contains progress bar</string>

    <!-- Animated -->
    <string name="pref_animated_title">Animated</string>

    <!-- Centered -->
    <string name="pref_centered_title">Centered</string>

    <!-- Thickness -->
    <string name="pref_thickness_title">Thickness</string>

    <!-- Preview -->
    <string name="preview">Preview</string>

    <!-- Sounds -->
    <string name="pref_cat_sounds_title">Sounds</string>
    <string name="pref_sound_enable_title">Enable sound</string>
    <string name="pref_sound_enable_summary">Plays notification sound when transfer is finished or interrupted</string>
    <string name="pref_sound_title">Choose sound</string>
    <string name="pref_sound_screen_off_title">Only when screen is off</string>
    <string name="pref_sound_screen_off_summary">Plays notification sound only when screen is off</string>

    <!-- Download Progress++ -->
    <string name="pref_about_dppp_title">Download Progress++</string>
    <string name="pref_about_dppp_summary">Find out more about alternate app that works without Xposed Framework</string>
    <string name="dlg_dppp_msg">Download Progress++ allows you to:\n
        &#8226; explicitly choose for which apps to track progress bar notifications\n
        &#8226; use circle style with percentage instead of simple line\n
        &#8226; does not require Xposed Framework nor Root\n
        &#8226; supports all devices running Android 4.3 or later (SDK API 18+)</string>
    <string name="dlg_dppp_ok">Yes, I\'m in</string>
    <string name="dlg_dppp_cancel">Maybe later</string>

</resources>
