<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2020 Peter Gregus (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_cat_options"
        android:title="@string/pref_cat_options_title">

       <ListPreference 
            android:key="pref_mode"
            android:title="@string/pref_mode_title"
            android:entries="@array/sb_download_progress_entries"
            android:entryValues="@array/sb_download_progress_values"
            android:defaultValue="TOP" />

       <com.ceco.sbdp.SeekBarPreference
            android:key="pref_edge_margin2"
            android:title="@string/pref_edge_margin_title"
            minimum="0"
            maximum="3"
            interval="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="0" />

       <com.ceco.sbdp.SeekBarPreference
            android:key="pref_thickness"
            android:title="@string/pref_thickness_title"
            minimum="1"
            maximum="4"
            interval="1"
            monitorBoxEnabled="true"
            monitorBoxUnit="px"
            android:defaultValue="1" />

       <CheckBoxPreference
            android:key="pref_centered"
            android:title="@string/pref_centered_title"
            android:defaultValue="false" />

       <CheckBoxPreference
            android:key="pref_animated"
            android:title="@string/pref_animated_title"
            android:defaultValue="true" />

       <CheckBoxPreference
            android:key="pref_god_mode"
            android:title="@string/pref_god_mode_title"
            android:summary="@string/pref_god_mode_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_colors"
        android:title="@string/pref_cat_colors_title">>

        <CheckBoxPreference
            android:key="pref_color_follow_clock"
            android:title="@string/pref_color_follow_clock_title"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="pref_color"
            android:title="@string/pref_color_title" 
            android:defaultValue="@integer/color_default"
            alphaSlider="true"
            hexValue="true"
            android:dependency="pref_color_follow_clock" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_sounds"
        android:title="@string/pref_cat_sounds_title">>

        <CheckBoxPreference
            android:key="pref_sound_enable"
            android:title="@string/pref_sound_enable_title"
            android:summary="@string/pref_sound_enable_summary"
            android:defaultValue="false" />

        <RingtonePreference 
            android:key="pref_sound"
            android:title="@string/pref_sound_title"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="false"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_sound_enable" />

        <CheckBoxPreference
            android:key="pref_sound_screen_off"
            android:title="@string/pref_sound_screen_off_title"
            android:summary="@string/pref_sound_screen_off_summary"
            android:defaultValue="false"
            android:dependency="pref_sound_enable" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_about"
        android:title="@string/pref_cat_about_title">

        <Preference
            android:key="pref_about" 
            android:summary="@string/pref_about_summary" />

        <Preference
            android:key="pref_about_dppp"
            android:title="@string/pref_about_dppp_title"
            android:summary="@string/pref_about_dppp_summary"
            android:persistent="false" />

        <ListPreference
            android:key="pref_about_donate" 
            android:title="@string/pref_about_donate_title"
            android:entries="@array/array_empty"
            android:entryValues="@array/array_empty"
            android:enabled="false"
            android:summary="@string/pref_about_donate_waiting"
            android:persistent="false" />

        <CheckBoxPreference
            android:key="pref_hide_launcher_icon"
            android:title="@string/pref_hide_launcher_icon_title"
            android:summary="@string/pref_hide_launcher_icon_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
